--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-session": "^1.17.1",
     "mysql": "^2.18.1",
+    "node.js": "^0.0.1-security",
     "nodemon": "^2.0.15",
     "path": "^0.12.7"
   }
